# badsv

./: .gitignore  Cargo.toml  README.md
src/: dsv.rs  main.rs
src/encodings/: mod.rs  utf16.rs  utf16_le.rs  utf32.rs  utf8.rs
