[package]
name = "badsv"
version = "0.1.0"
authors = ["Olivia Palmu <oliviaspalmu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
clap = { version = "3.2.25", features = ["cargo"] }
csv = "1.1"
